# python-typelib

./: .gitignore  .pre-commit  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile  README.md  cliff.toml  mkdocs.yml  pyproject.toml  pytest.ini  tox.ini  versions.json
.github/actions/bootstrap-environ/: action.yml
.github/workflows/: .build-matrix.yml  .validate-matrix.yml  changelog.yml  docs.yml  publish.yml  release.yml  tag.yml  validate.yml
.run/: pytest.run.xml  tox.run.xml
docs/: .pages  changelog.md  graph.md  index.md
scripts/: gen_ref_pages.py
src/typelib/: __init__.py  api.py  binding.py  classes.py  codec.py  codecs.py  compat.py  constants.py  contrib.py  ctx.py  format.py  frames.py  future.py  graph.py  inspection.py  interchange.py  refs.py  serdes.py
src/typelib/marshal/: __init__.py  api.py  routines.py
src/typelib/marshals/: __init__.py  api.py  routines.py
src/typelib/py/: __init__.py  classes.py  compat.py  frames.py  future.py  inspection.py  refs.py
src/typelib/unmarshal/: __init__.py  api.py  factory.py  routines.py
src/typelib/unmarshals/: __init__.py  api.py  routines.py
tests/: models.py
tests/unit/: conftest.py  test_api.py  test_binding.py  test_classes.py  test_codec.py  test_format.py  test_frames.py  test_future.py  test_graph.py  test_inspection.py  test_interchange.py  test_refs.py
tests/unit/marshal/: test_api.py  test_routines.py
tests/unit/marshals/: test_api.py  test_routines.py
tests/unit/py/: test_classes.py  test_frames.py  test_future.py  test_inspection.py  test_refs.py
tests/unit/unmarshal/: test_api.py  test_factory.py  test_routines.py
tests/unit/unmarshals/: test_api.py  test_routines.py
v0.0/: 404.html  index.html  sitemap.xml
v0.0/changelog/: index.html
v0.0/conduct/: index.html
v0.0/graph/: index.html
v0.0/reference/typelib/: index.html
v0.0/reference/typelib/binding/: index.html
v0.0/reference/typelib/codecs/: index.html
v0.0/reference/typelib/constants/: index.html
v0.0/reference/typelib/ctx/: index.html
v0.0/reference/typelib/graph/: index.html
v0.0/reference/typelib/marshals/: index.html
v0.0/reference/typelib/py/: index.html
v0.0/reference/typelib/serdes/: index.html
v0.0/reference/typelib/unmarshals/: index.html
v0.0/search/: search_index.json
v0.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.0/changelog/: index.html
v0.1.0/conduct/: index.html
v0.1.0/graph/: index.html
v0.1.0/reference/typelib/: index.html
v0.1.0/reference/typelib/binding/: index.html
v0.1.0/reference/typelib/codecs/: index.html
v0.1.0/reference/typelib/constants/: index.html
v0.1.0/reference/typelib/ctx/: index.html
v0.1.0/reference/typelib/graph/: index.html
v0.1.0/reference/typelib/marshals/: index.html
v0.1.0/reference/typelib/py/: index.html
v0.1.0/reference/typelib/serdes/: index.html
v0.1.0/reference/typelib/unmarshals/: index.html
v0.1.0/search/: search_index.json
v0.1.10/: 404.html  index.html  sitemap.xml
v0.1.10/changelog/: index.html
v0.1.10/conduct/: index.html
v0.1.10/graph/: index.html
v0.1.10/reference/typelib/: index.html
v0.1.10/reference/typelib/binding/: index.html
v0.1.10/reference/typelib/codecs/: index.html
v0.1.10/reference/typelib/constants/: index.html
v0.1.10/reference/typelib/ctx/: index.html
v0.1.10/reference/typelib/graph/: index.html
v0.1.10/reference/typelib/marshals/: index.html
v0.1.10/reference/typelib/py/: index.html
v0.1.10/reference/typelib/serdes/: index.html
v0.1.10/reference/typelib/unmarshals/: index.html
v0.1.10/search/: search_index.json
v0.1.11/: 404.html  index.html  sitemap.xml
v0.1.11/changelog/: index.html
v0.1.11/conduct/: index.html
v0.1.11/graph/: index.html
v0.1.11/reference/typelib/: index.html
v0.1.11/reference/typelib/binding/: index.html
v0.1.11/reference/typelib/codecs/: index.html
v0.1.11/reference/typelib/constants/: index.html
v0.1.11/reference/typelib/ctx/: index.html
v0.1.11/reference/typelib/graph/: index.html
v0.1.11/reference/typelib/marshals/: index.html
v0.1.11/reference/typelib/py/: index.html
v0.1.11/reference/typelib/serdes/: index.html
v0.1.11/reference/typelib/unmarshals/: index.html
v0.1.11/search/: search_index.json
v0.1.12/: 404.html  index.html  sitemap.xml
v0.1.12/changelog/: index.html
v0.1.12/conduct/: index.html
v0.1.12/css/: typelib.css
v0.1.12/graph/: index.html
v0.1.12/reference/typelib/: index.html
v0.1.12/reference/typelib/binding/: index.html
v0.1.12/reference/typelib/codecs/: index.html
v0.1.12/reference/typelib/constants/: index.html
v0.1.12/reference/typelib/ctx/: index.html
v0.1.12/reference/typelib/graph/: index.html
v0.1.12/reference/typelib/marshals/: index.html
v0.1.12/reference/typelib/py/: index.html
v0.1.12/reference/typelib/serdes/: index.html
v0.1.12/reference/typelib/unmarshals/: index.html
v0.1.12/search/: search_index.json
v0.1.13/: 404.html  index.html  objects.inv  sitemap.xml
v0.1.13/changelog/: index.html
v0.1.13/conduct/: index.html
v0.1.13/graph/: index.html
v0.1.13/reference/typelib/: index.html
v0.1.13/reference/typelib/binding/: index.html
v0.1.13/reference/typelib/codecs/: index.html
v0.1.13/reference/typelib/constants/: index.html
v0.1.13/reference/typelib/ctx/: index.html
v0.1.13/reference/typelib/graph/: index.html
v0.1.13/reference/typelib/marshals/: index.html
v0.1.13/reference/typelib/py/: index.html
v0.1.13/reference/typelib/serdes/: index.html
v0.1.13/reference/typelib/unmarshals/: index.html
v0.1.13/search/: search_index.json
v0.1.9/: 404.html  index.html  sitemap.xml
v0.1.9/changelog/: index.html
v0.1.9/conduct/: index.html
v0.1.9/graph/: index.html
v0.1.9/reference/typelib/: index.html
v0.1.9/reference/typelib/binding/: index.html
v0.1.9/search/: search_index.json
v0.1/changelog/: index.html
v0.1/conduct/: index.html
v0.1/graph/: index.html
v0.1/reference/typelib/: index.html
v0.1/search/: search_index.json
(+73 files in other folders)
