[tool.poetry]
name = "typelib"
version = "0.1.4"
description = "A toolkit for marshalling, unmarshalling, and runtime validation leveraging type annotations."
authors = ["Sean Stewart <sean.stewart@hey.com>"]
readme = "README.md"
packages = [
    {include = "typelib", from = "src"},
]
repository = "https://github.com/seandstewart/typelib"
keywords = ["typing", "data", "annotations", "validation", "serdes"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Utilities",
    "Typing :: Typed",
]


[tool.poetry.dependencies]
python = "^3.9"
inflection = "^0.5"
pendulum = "^3"
orjson = {version = "^3", optional = true}
typing-extensions = {version = "^4.10"}
more-itertools = "^10"

[tool.poetry.extras]
json = ["orjson"]

[tool.poetry.group.test.dependencies]
pytest = "^8"
pytest-cov = "^5"
pytest-parametrize-suite = "^23.1.1"

[tool.poetry.group.benchmarks.dependencies]


[tool.poetry.group.lint.dependencies]
pre-commit = "^3.7"

[tool.poetry.group.docs.dependencies]
mkdocs-material = {extras = ["imaging"], version = "^9"}
mkdocstrings = {extras = ["python"], version = "^0.26"}
mkdocs-awesome-pages-plugin = "^2.9"
mkdocs-gen-files = "^0.5"
pymdown-extensions = "^10"
mike = "^2"
mkdocs-section-index = "^0.3"
mkdocs-literate-nav = "^0.6"
mkdocs-open-in-new-tab = "^1"


[tool.poetry.group.dev.dependencies]
orjson = "^3"
tox = "^4"
git-changelog = "^2"

[tool.coverage.run]
branch = true
data_file = "coverage.db"
include = [
    "src/**/*",
]

[tool.coverage.paths]
source = [
    "src/*",
]

[tool.coverage.report]
skip_empty = true
sort = "Cover"
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "def __str__",
    "if self.debug:",
    "if settings.DEBUG",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "if (typing\\.)?TYPE_CHECKING:",
    "class\\s\\w+\\((typing\\.)?Protocol(\\[.*\\])?\\):",
    "@(abc\\.)?abstractmethod",
    "@(typing\\.)?overload",
    ".*\\.\\.\\."
]
omit = [
    "dist/*",
    "tests/*",
    "docs/*",
    ".venv/*",
    "benchmark/*",
]


[tool.ruff.lint]
extend-select = [
    # Bugbear
    "B",
    # McCabe Complexity
    "C9",
    # isort
    "I",
    # flake8-simplify
    "SIM",
    # Future annotation
    "FA"
]

[tool.ruff.lint.per-file-ignores]
# Ignore `E402` (import violations) in all `__init__.py` files
"__init__.py" = ["E402", "F403"]

[tool.ruff.lint.isort]
known-local-folder = ["tests"]
extra-standard-library = ["typing_extensions", "graphlib"]

[tool.mypy]
mypy_path = "$MYPY_CONFIG_FILE_DIR/src/"
no_namespace_packages = true
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true
follow_imports = "silent"
exclude = ".*tests/.*|.*docs/.*"

[tool.git-changelog]
convention = "conventional"
in-place = true
output = "docs/changelog.md"
parse-refs = true
parse-trailers = true

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
